--- a/Sightline.ipynb
+++ b/Sightline.ipynb
@@ -5,6 +5,8 @@
     "colab": {
       "name": "Sightline.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,23 +72,17 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4Xphaj7hQxIO",
+        "id": "PzYa-XgdswUx",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 170
-        },
-        "outputId": "41ec03eb-11f5-4755-a860-444195a429a9"
+        "colab": {}
       },
       "source": [
-        "\n",
-        "\n",
         "# Loger for python console \n",
         "\n",
         "def log(message):\n",
         "\tprint('{} , {}'.format(time.time(), message))\n",
         "\n",
-        "@numba.jit(forceobj=True, parallel=True)\n",
+        "@numba.jit(forceobj=True, parallel=True )\n",
         "def FilterByBBX(Faces, line):\n",
         "\tmaxX = line[0]\n",
         "\tmaxY = line[1]\n",
@@ -115,23 +111,28 @@
         "\n",
         "\n",
         "def split(aabb):\n",
-        "\tminX = aabb.vecMin[0]\n",
-        "\tmaxX = aabb.vecMax[0]\n",
-        "\tminY = aabb.vecMin[1]\n",
-        "\tmaxY = aabb.vecMax[1]\n",
-        "\tminZ = aabb.vecMin[2]\n",
-        "\tmaxZ = aabb.vecMax[2]\n",
-        "\tcenterX = np.average([minX, maxX])\n",
-        "\tcenterY = np.average([minY, maxY])\n",
-        "\t#centerZ = (minZ + maxZ)/2\n",
+        "    minX = aabb.vecMin[0]\n",
+        "    maxX = aabb.vecMax[0]\n",
+        "    minY = aabb.vecMin[1]\n",
+        "    maxY = aabb.vecMax[1]\n",
+        "    minZ = aabb.vecMin[2]\n",
+        "    maxZ = aabb.vecMax[2]\n",
+        "    centerX = np.average([minX, maxX])\n",
+        "    centerY = np.average([minY, maxY])\n",
+        "    centerZ = np.average([minZ, maxZ])\n",
         "\n",
-        "\tbbox0 = (maxX, maxY, maxZ, centerX, centerY, minZ)\n",
-        "\tbbox1 = (centerX, maxY,maxZ,  minX, centerY, minZ)\n",
-        "\tbbox2 = (maxX, centerY, maxZ, centerX, minY, minZ)\n",
-        "\tbbox3 = (centerX, centerY, maxZ, minX, minY, minZ)\n",
-        "\treturn bbox0, bbox1 , bbox2, bbox3\n",
+        "    bbox0 = (maxX, maxY, maxZ, centerX, centerY, centerZ)\n",
+        "    bbox1 = (centerX, maxY,maxZ,  minX, centerY, centerZ)\n",
+        "    bbox2 = (maxX, centerY, maxZ, centerX, minY, centerZ)\n",
+        "    bbox3 = (centerX, centerY, maxZ, minX, minY, centerZ)\n",
+        "    bbox4 = (maxX, maxY, centerZ, centerX, centerY, minZ)\n",
+        "    bbox5 = (centerX, maxY,centerZ,  minX, centerY, minZ)\n",
+        "    bbox6 = (maxX, centerY, centerZ, centerX, minY, minZ)\n",
+        "    bbox7 = (centerX, centerY, centerZ, minX, minY, minZ)\n",
         "\n",
-        "@numba.jit(forceobj=True, parallel=True)\n",
+        "    return bbox0, bbox1 , bbox2, bbox3, bbox4, bbox5, bbox6, bbox7\n",
+        "\n",
+        "@numba.jit(forceobj=True, parallel=True, nopython=True)\n",
         "def XClipLine(d,vecMax, vecMin,  v0,  v1, f_low, f_high):\n",
         "\t# Method for AABB vs line took from https://github.com/BSVino/MathForGameDevelopers/tree/line-box-intersection\n",
         "\t# // Find the point of intersection in this dimension only as a fraction of the total vector\n",
@@ -161,7 +162,8 @@
         "\treturn f_low , f_high\n",
         "\n",
         "\n",
-        "@numba.jit(forceobj=True, parallel=True)\n",
+        "\n",
+        "# @numba.jit(forceobj=True, parallel=True)\n",
         "def LineAABBIntersection(aabbBox,line):\n",
         "\t# Method for AABB vs line took from https://github.com/BSVino/MathForGameDevelopers/tree/line-box-intersection\n",
         "\tf_low = 0\n",
@@ -181,7 +183,8 @@
         "\t\treturn False\n",
         "\n",
         "\treturn True\n",
-        "@numba.jit(forceobj=True, parallel=True)\n",
+        "\n",
+        "# @numba.jit(forceobj=True, parallel=True)\n",
         "def checkFaces(Faces, line):\n",
         "\n",
         "\tfor f in Faces:\n",
@@ -190,16 +193,17 @@
         "\treturn False\n",
         "\n",
         "\n",
-        "@numba.jit(forceobj=True, parallel=True)\n",
+        "\n",
+        "# @numba.jit(forceobj=True, parallel=True)\n",
         "def checklines(meshes, line):\n",
         "\n",
-        "    # global count\n",
-        "    # global totalLines\n",
+        "    global count\n",
+        "    global totalLines\n",
         "\n",
-        "    # if (count % 10) == 0:\n",
-        "    #     # print(\"=\", end =\"\")\n",
-        "    #     print(\"\\r {} of {} total lines\".format( str(count),totalLines ), end =\"\")\n",
-        "    # count = count + 1\n",
+        "    if (count % 10) == 0:\n",
+        "        # print(\"=\", end =\"\")\n",
+        "        print(\"\\r {} of {} total lines\".format( str(count),totalLines ), end =\"\")\n",
+        "    count = count + 1\n",
         "    for b in meshes:\n",
         "        #check if line line intersect with mesh\n",
         "        bbx = b.boundingBox\n",
@@ -208,15 +212,71 @@
         "            #if true split bbx in 4\n",
         "            splitted  = b.parts\n",
         "            for s in splitted:\n",
-        "                \n",
-        "                if LineAABBIntersection( s.boundingBox , line):\n",
-        "                    \n",
-        "\n",
-        "                    check = checkFaces(s.faces,line)\n",
-        "                    if check:\n",
-        "                        return True\n",
+        "                for ss in s.parts:\n",
+        "                    if LineAABBIntersection( ss.boundingBox , line):\n",
+        "                        for sss in ss.parts:\n",
+        "                            check = checkFaces(sss.faces,line)\n",
+        "                            if check:\n",
+        "                                return True\n",
         "\n",
         "    return False\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HYjSrB-mi8RP",
+        "colab_type": "code",
+        "outputId": "93a97ea6-c876-43db-eb24-4eb863d1e9bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 122
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Ul2ClsFVs-gm",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Mesh class\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PlorkFp6s7XR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "\n",
         "\n",
         "\n",
         "class Mesh():\n",
@@ -235,6 +295,26 @@
         "    ff = faces[faces[:,6] == Id]\n",
         "    filteredFaces = FilterByBBX(ff, boundingBox)\n",
         "    drop = np.delete(filteredFaces, np.s_[6:], axis=1)\n",
+        "    self.parts = []\n",
+        "    if drop.any():\n",
+        "        self.parts = [MeshSubPart(Id, x, faces ) for x in split(self.boundingBox) ]\n",
+        "\n",
+        "class MeshSubPart():\n",
+        "  def __init__(self,Id, boundingBox,faces):\n",
+        "    self.boundingBox = BoundingBoxCreate(boundingBox)\n",
+        "    ff = faces[faces[:,6] == Id]\n",
+        "    filteredFaces = FilterByBBX(ff, boundingBox)\n",
+        "    drop = np.delete(filteredFaces, np.s_[6:], axis=1)\n",
+        "    self.parts = []\n",
+        "    if drop.any():\n",
+        "        self.parts = [MeshSubSubPart(Id, x, faces ) for x in split(self.boundingBox) ]\n",
+        "\n",
+        "class MeshSubSubPart():\n",
+        "  def __init__(self,Id, boundingBox,faces):\n",
+        "    self.boundingBox = BoundingBoxCreate(boundingBox)\n",
+        "    ff = faces[faces[:,6] == Id]\n",
+        "    filteredFaces = FilterByBBX(ff, boundingBox)\n",
+        "    drop = np.delete(filteredFaces, np.s_[6:], axis=1)\n",
         "    self.faces =[ BoundingBoxCreate(d) for d in drop]\n",
         "    \n",
         "\n",
@@ -242,8 +322,23 @@
         "  objects = []\n",
         "  for m in meshes:\n",
         "    objects.append(Mesh(m, faces))\n",
-        "  return objects\n",
-        "\n",
+        "  return objects"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "4Xphaj7hQxIO",
+        "colab_type": "code",
+        "outputId": "ae004ec7-7f7d-4268-9d98-12010fcab584",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 119
+        }
+      },
+      "source": [
         "\n",
         "\n",
         "count = 0\n",
@@ -290,9 +385,10 @@
         "    # ## Finding mesh intersection\n",
         "\n",
         "    result = createObjects(meshes_.values, mesh_faces.values)\n",
-        "    funB = partial(checklines, result)\n",
-        "    # resultsB = [checklines(result, x) for x in  lines.values] # total time 192.399 seconds | 1378 lines between POV and targets\n",
-        "    resultsB = pool.map(funB,lines.values)\n",
+        "    # funB = partial(checklines, result) # total time 211.28 seconds\n",
+        "    # resultsB = pool.map(funB,lines.values)\n",
+        "    resultsB = [checklines(result, x) for x in  lines.values] # total time 192.399 seconds | 1378 lines between POV and targets\n",
+        "    \n",
         "\n",
         "    print(\"\")\n",
         "    lines['hits']= resultsB\n",
@@ -309,22 +405,24 @@
         "\n",
         "    lines[ lines['hits'] == True].to_csv('hits.csv')\n",
         "    end = time.time()\n",
-        "    print('total time {} seconds'.format(round(end-start, 3)))"
+        "    print('total time {} seconds'.format(round(end-start, 3)))\n",
+        "    print('{},{},{},{},{},{},{},{},{} '.format(\"POV\",\"Target\",\"Meshes\",\"Meshes faces\", \"Lines of sight\", \"Hits\", \"Miss\",\"time\", \"Comments\"))\n",
+        "    data = '{},{},{},{},{},{},{},{},{}'.format(len(pov_), len(target_), len(meshes_), len(mesh_faces), len(lines), positive, negative,  round(end-start, 3), \"3 Level nesting  + FilterByBBX + XClipLine + \" )\n",
+        "    with open('/content/drive/My Drive/sightlinelog.csv','a') as fd:\n",
+        "        fd.write(data + \"\\n\")\n",
+        "    print(data)"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "2 Points of View\n",
-            "1263 targets or points of interest\n",
-            "1 meshes in context set\n",
-            "48022 meshes faces in set\n",
-            "1378 lines between POV and targets\n",
-            "\n",
-            "693 lines with clean sight from POV to targets\n",
-            "685 lines with possible context intersection\n",
-            "total time 215.121 seconds\n"
+            "12 Points of View\n",
+            "5052 targets or points of interest\n",
+            "4 meshes in context set\n",
+            "192088 meshes faces in set\n",
+            "33012 lines between POV and targets\n",
+            " 1100 of 33012 total lines"
           ],
           "name": "stdout"
         }
